<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.TabAddMovieItemBottomNav"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerMovieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/MovieGenre"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddHistorical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/green"
            android:text="@string/Historical"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/headerMovieGenre" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddFantasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:text="@string/Fantasy"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/buttonAddHistorical" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddAdventures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/green"
            android:text="@string/Adventures"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/buttonAddFantasy"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/addMovie"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonAddAdventures" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterNameMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/MovieName"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/teal_200"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@color/green"
            app:layout_constraintTop_toBottomOf="@id/headerAddProduct"
            app:startIconDrawable="@drawable/add_movie"
            app:startIconTint="@color/purple_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EnterNameMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/ping"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterNewMovieGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/NewMovieGenre"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/teal_200"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@color/green"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterNameMovie"
            app:startIconDrawable="@drawable/new_genre"
            app:startIconTint="@color/purple_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EnterNewMovieGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/ping"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterMovieTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/MovieTime"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/teal_200"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@color/green"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterNewMovieGenre"
            app:startIconDrawable="@drawable/movie_time"
            app:startIconTint="@color/purple_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EnterMovieTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/ping"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEnterMovieRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/MovieRating"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/teal_200"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@color/ping"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterMovieTime"
            app:startIconDrawable="@drawable/movie_rating"
            app:startIconTint="@color/purple_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EnterMovieRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/green"
                android:textCursorDrawable="@drawable/cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sectionResMovieTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/sectionEnterMovieRating"
            tools:layout_editor_absoluteX="0dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterNameMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterMovieNameGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterMovieTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterMovieRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/green"
            android:text="@string/addMovie"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/sectionResMovieTime"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
